# vehicles-managament

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_partial_unique_placa.py
app/: main.py
app/core/: config.py  database.py  security.py
app/dependencies/: auth.py
app/models/: user.py  vehicle.py
app/repositories/: vehicle.py
app/routers/: auth.py  vehicles.py
app/schemas/: common.py  vehicle.py
app/services/: auth.py  currency.py  vehicle.py
docs/: arquitetura.md  fluxo-api.md  modelo-dados.md
scripts/: seed.py
tests/: conftest.py
tests/e2e/: test_flow.py
tests/integration/: test_vehicles.py
tests/unit/: test_currency_service.py  test_vehicle_service.py
